--- a/config.toml
+++ b/config.toml
@@ -164,10 +164,10 @@ defaultContentLanguageInSubdir = false
 #  url = "#projects"
 #  weight = 4
 
-#[[menu.main]]
-#  name = "Teaching"
-#  url = "#teaching"
-#  weight = 5
+[[menu.main]]
+  name = "Events"
+  url = "#events"
+  weight = 5
 
 [[menu.main]]
   name = "Contact"
