--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
 
 # Enable comments by entering your Disqus shortname
-disqusShortname = ""
+disqusShortname = "andreadelprete"
 
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = ""
@@ -26,6 +26,7 @@ defaultContentLanguageInSubdir = false
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
   email = "adelpret@laas.fr"
+  email2 = "andre.delprete@gmail.com"
   address = "LAAS/CNRS, 7 Avenue du Colonel Roche, 31077 Toulouse, France"
 #  office_hours = "email for appointment"
   phone = "+33 5.61.33.68.90 "
@@ -102,7 +103,8 @@ defaultContentLanguageInSubdir = false
     'Work in progress',  # 3
     'Technical report',  # 4
     'Book',  # 5
-    'Book chapter'  # 6
+    'Book chapter',  # 6
+	'Workshop' # 7
   ]
 
   # Social/Academic Networking
