--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ footnotereturnlinkcontents = "<sup>^</sup>"
 disqusShortname = "andreadelprete"
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = ""
+googleAnalytics = "UA-104474224-1"
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
